data/derived/sp14/progs/unify/prog0598.ml.out
Characters 499-501:
  | Crazy(e1, e2, e3) -> if (e1 > e2) then e3 else (-e3);;
                                           ^^
Error: This expression has type expr but an expression was expected of type
         float
